2013-01-08  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Command line options can be saved as default
        for new jobs by clicking a check box in the "add command line
        options" dialog.

2013-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed a crash in the chapter editor if the root
        was selected and the user used the "Set values" button.

2013-01-01  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mmg: removal: The 'header removal compression' method
        is not turned on by default anymore. This affects the following
        track types: AC3, AVC/h.264, Dirac, DTS, MP3. The setting in mmg
        that turned it off by default has been removed.

2012-12-31  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Added experimental support for the Opus
        audio codec. Parts of an implementation of #779.

2012-12-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: "text"-type tracks in MP4 files are only
        treated as chapters if their track ID is listed on a "chap" atom
        inside a "tref" track reference atom. Fixes #815.

2012-12-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: new feature: Implemented splitting by chapter
	numbers. Implements #504 and #814.

2012-12-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Removed several warnings from the MPEG-2
	video parser code about open GOPs, missing references. Those were
	too confusing for most users, even after being given additional
	information via email and FAQs.

	* mkvextract: new feature: Implemented extraction of ALAC into
	Core Audio Format files (CAF). Implements #786.

2012-12-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: new feature: Implemented splitting by frame/field
	numbers. Implements #771.

	* mmg: bug fix: Fixed consistency checks when appending files and
	at least one track is disabled.

	* mkvmerge: new feature: Implemented a reader for the