@@ -224,5 +224,6 @@ typedef struct {
 #define MP4OTI_MPEG1Visual                     0x6A
 #define MP4OTI_MPEG1Audio                      0x6B
 #define MP4OTI_JPEG                            0x6C
+#define MP4OTI_VOBSUB                          0xE0
 
 #endif // MTX_INPUT_QTMP4_ATOMS_H
