@@ -1,3 +1,10 @@
+2013-01-11  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: new feature: Implemented reading VobSubs from MP4
+        files if they're stored in the Nero Digital way (track sub-type
+        'mp4s', ESDS object type identifier 0xe0). Implements the second
+        half of #815.
+
 2013-01-08  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: new feature: Command line options can be saved as default
